initial migration with ls context revamp